test/sprtn/errors/symbol-format.sprtn
this.is.actually.valid
this.wont.fly.though.
its-not-a-sentence.
.neitherIsItJava
.
..
...
from..to
